# but_robot_demos

./: README.md
BP/: CMakeLists.txt  mainpage.dox  manifest.xml
BP/include/BP/: detector.h  mover.h  positioner.h
BP/launch/: detector.launch  detector_simulator.launch  mover.launch  positioner.launch  positioner_simulator.launch
BP/msg/: Detections.msg
BP/msg_gen/lisp/: BP-msg.asd  Detections.lisp  GoalCoords.lisp  PointOfInterest.lisp  _package.lisp  _package_Detections.lisp  _package_GoalCoords.lisp  _package_PointOfInterest.lisp
BP/src/: detector.cpp  mover.cpp  positioner.cpp
BP/srv/: DetectBalls.srv
BP/srv_gen/lisp/: BP-srv.asd  DetectBalls.lisp  _package.lisp  _package_DetectBalls.lisp
ball_picker/: CMakeLists.txt  README.txt  costmap_plugins.xml  mainpage.dox  manifest.xml  model.sdf
ball_picker/include/ball_picker/: ball_picker_layer.h  controller.h  detector.h  kinect_repeater.h  manipulator.h  mover.h  orientation.h  positioner.h  (+1 more)
ball_picker/launch/: all.launch  all_simulator.launch  ball_picker.launch  ball_picker_simulator.launch  ball_picker_turtlebot_simulator.launch  controller.launch  detector.launch  detector_simulator.launch  detector_turtlebot_simulator.launch  gmap.launch  kinect_repeater.launch  manipulator.launch  mover.launch  mover_test.launch  positioner.launch  positioner_simulator.launch  positioner_turtlebot_simulator.launch  tb_gmap.launch  twister_simulator.launch
ball_picker/msg/: Detections.msg  FlowCommands.msg
ball_picker/param/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  tb_base_local_planner_params.yaml  tb_costmap_common_params.yaml  tb_global_costmap_params.yaml  tb_local_costmap_params.yaml
ball_picker/src/: ball_picker_layer.cpp  controller.cpp  detector.cpp  kinect_repeater.cpp  manipulator.cpp  mover.cpp  mover_test.cpp  orientation.cpp  positioner.cpp  twister.cpp
ball_picker/srv/: DetectBalls.srv  DetectObjects.srv  FlowControl.srv
ball_picker/tennis_ball/: model.config  model.sdf
mixed_real_c/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
mixed_real_c/config/: front.yaml  hugeBox.yaml  objTest1.yaml  objTest2.yaml  presetObjects.yaml  presetObjects.yaml~
mixed_real_c/doc/: index.html  licenses.html
mixed_real_c/launch/: mix_real.launch  mix_real_test1.launch  mix_real_test_laser.launch  mix_real_test_out.launch  test1.launch  test2.launch
road_speed_control/: README.txt  rob_project.yaml
road_speed_control/rob_project/: CMakeLists.txt  CMakeLists.txt~  package.xml
tb_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tb_moveit_config/config/: btb.srdf  btb_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
tb_moveit_config/launch/: btb_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
trolley_main_packages/: README.md
trolley_main_packages/kinect_audio/: .cproject  .project  .pydevproject  .~lock.data.csv#  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
trolley_main_packages/kinect_motor/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
trolley_main_packages/trolley/: CMakeLists.txt  cmake_install.cmake  configuration.xml  mainpage.dox  manifest.xml
velodyne_gps/: package.xml
velodyne_gps/include/velodyne_gps/: nmea_convertor.h
velodyne_gps/src/: nmea_convertor.cc
velodyne_gps_driver/: README.md
velodyne_gps_driver/msg/: VelodyneGPSPacket.msg
velodyne_gps_driver/velodyne_gps/: CMakeLists.txt
velodyne_gps_driver/velodyne_gps/src/: velodyne_gps_node.cc
velodyne_gps_driver/velodyne_gps_driver/: CMakeLists.txt  package.xml
velodyne_gps_driver/velodyne_gps_driver/include/velodyne_gps_driver/: input.h
velodyne_gps_driver/velodyne_gps_driver/msg/: VelodyneGPSScan.msg
velodyne_gps_driver/velodyne_gps_driver/src/driver/: CMakeLists.txt  driver.cc  driver.h
velodyne_gps_driver/velodyne_gps_driver/src/lib/: CMakeLists.txt
voice_control/: Makefile  README.md  build.gradle  build.xml  package.xml  run.sh  settings.gradle
voice_control/capturer/: Makefile
voice_control/data/: recognizer
voice_control/launch/: voice_control.launch  voice_control_raws.launch
voice_control/recognizer/: build.gradle  grammar.gdl  recognizer  sentences.txt
voice_control/src/: .directory
voice_control/src/recognizer/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
voice_control/src/recognizer/recognizer/: build.gradle
voice_control/src/recognizer/recognizer/src/main/java/com/github/recognizer/recognizer/: Listener.java  Talker.java
voice_control/src/recognizer/recognizer/src/main/java/cz/vut/fit/xhajek31/: KinectRaw.java  ROS.java  RecognizerNode.java
voice_control/src/voice_control/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
voice_control/src/voice_control/data/: grammar.gdl  voice_control
voice_control/src/voice_control/data/config/: default_config.xml  frontend_config.xml
voice_control/src/voice_control/data/dict/: digits.dict
voice_control/src/voice_control/data/gram/: robot_grammar.gram
voice_control/src/voice_control/gradle/wrapper/: gradle-wrapper.properties
voice_control/src/voice_control/launch/: voice_control.launch  voice_control_execute.launch  voice_control_google.launch  voice_control_lm.launch
voice_control/src/voice_control/voice_control/: build.gradle
voice_control/src/voice_control/voice_control/src/main/java/edu/vutbr/xhajek31/: Kinect.java  ROS.java  RecognizerNode.java
voice_control/src/voice_control/voice_control/src/main/java/edu/vutbr/xhajek31/gspeech/: GRecognizer.java  VAD.java
voice_control/src/voice_control/voice_control/src/main/java/edu/vutbr/xhajek31/loop/: GSpeechLoop.java  GrammarLoop.java
(+562 files in other folders)
