<?xml version="1.0"?>
<package>
  <name>velodyne_gps</name>
  <version>0.0.1</version>
  <description>The velodyne_gps package is for convert position from raw data position packet to ROS position message</description>
  <maintainer email="xgoldm03@stud.fit.vutbr.cz">Tomas Goldmann</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>velodyne_gps_driver</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>velodyne_gps_driver</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>